# alpha-radar

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
alerts/: __init__.py  engine.py  notifier.py  rules.py
backtesting/: __init__.py  metrics.py  portfolio.py  replay.py  runner.py  walk_forward.py
collectors/: README.md  __init__.py  arxiv_collector.py  base.py  clinicaltrials_collector.py  coingecko_collector.py  fda_collector.py  github_collector.py  news_collector.py  sec_edgar_collector.py  semantic_scholar_collector.py  usaspending_collector.py  yfinance_collector.py
config/: README.md  __init__.py  github_repos.py  pdufa_calendar.py  sectors.py  settings.py  watchlists.py
dashboard/: __init__.py  _data.py  app.py
dashboard/pages/: 1_Heat_Map.py  2_Opportunities.py  3_Performance.py  4_Alerts.py  5_Memory.py  6_Backtest.py  7_Thesis.py
features/: README.md  __init__.py  base.py  sentiment.py  technical.py  velocity.py
memory/: README.md  __init__.py  database.py
scheduler/: README.md  __init__.py  jobs.py
scoring/: README.md  __init__.py  _io.py  sector_heat.py  stock_scorer.py  weights.py
scripts/: db_state.py  initial_collect.py  initial_compute.py  seed_demo.py
tests/: conftest.py
tests/test_alerts/: test_engine.py  test_notifier.py  test_rules.py
tests/test_backtesting/: test_metrics.py  test_portfolio.py  test_replay.py  test_runner.py  test_walk_forward.py
tests/test_collectors/: test_arxiv_collector.py  test_clinicaltrials_collector.py  test_coingecko_collector.py  test_fda_collector.py  (+6 more)
thesis/: __init__.py  _io.py  evaluator.py  generator.py  post_mortem.py
(+11 files in other folders)
